# Minimize-All

./: CMakeLists.txt  Messages.sh  README.md  org.kde.minimizeall.plasmoid
package/: metadata.desktop
package/contents/ui/: main.qml
plugin/: CMakeLists.txt  minimizeall.cpp  minimizeall.h  minimizeallplugin.cpp  qmldir
